# imaginecup2026

./: .env  .env.sample  .gitignore  Dockerfile  FINAL_SUCCESS_SUMMARY.md  MCP_DEPLOYMENT_GUIDE.md  PROJECT_STATUS_REPORT.md  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
.claude-flow/metrics/: system-metrics.json
.github/workflows/: deploy-all.yml  deploy-backend.yml  deploy-frontend.yml
agents/: config.py
agents/demand_forecasting/: __init__.py
agents/demand_forecasting/models/: README.md  demand_forecaster.pkl
agents/orchestrator/: magentic_workflow.py
azure-agents/: .env.example  .gitignore  NEGOTIATION_AGENT_INTEGRATION_GUIDE.md  QUICK_REFERENCE.md  README.md  deploy-all.sh  deploy-backend.sh  deploy-frontend.sh  package.json
azure-agents/frontend/: DEPLOYMENT_CHECKLIST.md  Dockerfile  dashboard.tsx  next.config.mjs  package-lock.json
azure-agents/frontend/components/: agent-activity-panel.tsx  approval-queue.tsx  data-card.tsx  order-summary.tsx  workflow-engine-card.tsx  workflow-triggers.tsx
azure-agents/frontend/hooks/: use-approvals.ts  use-supply-chain-metrics.ts  use-workflow-history.ts  use-workflow-stream.ts
azure-agents/frontend/lib/: api-client.ts
azure-agents/realtime_price_agent/: Dockerfile  TESTING_README.md  container-app-config.yaml  main.py  requirements.txt  test_negotiation_tools.py  workflow_history.json
azure-agents/realtime_price_agent/database/: models.py  negotiation_models.py  schema.sql
azure-agents/realtime_price_agent/docs/: architecture.md
azure-agents/realtime_price_agent/schemas/: __init__.py  negotiation.py
azure-agents/realtime_price_agent/services/: inventory_service.py  negotiation_service.py  order_service.py
azure-agents/scripts/: health-check.sh  setup.sh  start_mcp_servers.sh  test-all.sh
database/: models.py
docs/: AMAZON_API_APP_BACKUP.md  AZURE_COST_OPTIMIZATION_SUMMARY.md  DEPLOYMENT_PLAN.md  DEPLOYMENT_STANDARDS.md  HANDOFF_TO_DEV_B.md  MCP_TOOLS_TESTING_GUIDE.md  NEGOTIATION_IMPLEMENTATION_PLAN.md  architecture.md  deploy_customization.md  deployment.md  ideas.md  local_development.md
docs/implementation_docs/: implementation_plan.md
frontend/: .env.sample  README.md  dashboard.tsx  package-lock.json  pnpm-lock.yaml  tsconfig.json
frontend/app/: globals.css  layout.tsx
frontend/components/: agent-activity-panel.tsx  approval-queue.tsx  history-panel.tsx  supply-chain-radar.tsx  workflow-engine-card.tsx  workflow-history.tsx  workflow-triggers.tsx
legacy/: main_backup_v3.py
legacy/src/database/: connection.py  create_tables_rest.py
legacy/src/scripts/: create_tables.py  execute_schema.py  populate_all.py  statistical_order_generator.py
legacy/src/services/: order_service.py
mcp_servers/: docker-compose.yml
mcp_servers/inventory_management/: Dockerfile
mcp_servers/supplier_data/: server.py
notebooks/: demand_forecasting_training.py
realtime_price_agent/: .gitignore  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS.md  Dockerfile  README.md  START_SERVERS_AND_TEST.md  deploy-mcp-to-azure.sh  deploy-to-azure.sh  main.py  pyproject.toml  simple_e2e_test.py  test_negotiation_tools.py  workflow_history.json
realtime_price_agent/.swarm/: memory.db-shm  memory.db-wal
realtime_price_agent/agents/: __init__.py  config.py
realtime_price_agent/agents/automated_ordering/: agent.py
realtime_price_agent/agents/demand_forecasting/: agent.py  model_service.py
realtime_price_agent/agents/negotiation/: __init__.py
realtime_price_agent/agents/orchestrator/: __init__.py  magentic_workflow.py
realtime_price_agent/database/: config.py  create_tables.py  test_connection.py
realtime_price_agent/docs/: mcp_deploy.md  spec.md
realtime_price_agent/mcp_servers/: README.md  docker-compose.yml  test_mcp_servers.py
realtime_price_agent/notebooks/: demand_forecasting_training.ipynb
realtime_price_agent/services/: ap2_service.py  negotiation_service.py  price_service.py  workflow_service.py
realtime_price_agent/static/: index.html
scripts/: .backend-url.sh  deploy-all.sh  setup.sh
services/: supplier_service.py  workflow_service.py
src/scripts/: 02_generate_inventory.py  order_generation_params.json  setup_env_from_azd.py
static/: index.html
(+58 files in other folders)
